# compact_enc_det_rs

./: .gitmodules  Cargo.toml  LICENSE  README.md
compact-enc-det/: Cargo.toml  README.md
compact-enc-det-sys/: Cargo.toml  README.md  build.rs
compact-enc-det-sys/src/: ced_wrapper.cc  ced_wrapper.h  lib.rs
compact-enc-det/src/: lib.rs
